force-app/main/default/objects/Grupo_de_Afinidad__c/Grupo_de_Afinidad__c.object-meta.xml
<CustomObject>
    <label>Grupo de Afinidad</label>
    <nameField>
        <label>Nombre de Grupo de Afinidad</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grupos de Afinidad</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>