force-app/main/default/objects/Grupo_de_Afinidad__c/fields/Fecha_creacion_en_SS__c.field-meta.xml
<CustomField>
    <fullName>Fecha_creacion_en_SS__c</fullName>
    <label>Fecha de creación en SS</label>
    <type>DateTime</type>
</CustomField>