force-app/main/default/objects/Grupo_de_Afinidad__c/fields/Id_Externo_G_Afinidad__c.field-meta.xml
<CustomField>
    <fullName>Id_Externo_G_Afinidad__c</fullName>
    <description>Este campo se completa con un workflow que le asigna, al crearse, el valor del campo &quot;Name&quot;. Queda oculto del formato de página</description>
    <externalId>true</externalId>
    <label>Id Externo G Afinidad</label>
    <length>80</length>
    <type>Text</type>
</CustomField>