force-app/main/default/objects/Grupo_de_Afinidad__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Id_Externo_G_Afinidad__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>